# st25r3911b

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: command.rs  consts.rs  error.rs  lib.rs  picc.rs  register.rs  utils.rs
