[package]
name = "st25r3911b"
version = "0.1.0"
authors = ["Reinis Muiznieks <muiznieks.reinis@gmail.com>"]
edition = "2021"
description = "A platform agnostic driver to interface the ST25R3911B (NFC/RFID reader/writer)"
license = "MIT OR Apache-2.0"
keywords = ["rfid", "st25r3911b", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
bitflags = "1.3.2"
delog = "0.1.6"
embedded-hal = "=1.0.0-alpha.10"

[features]
default = ["log-none"]

log-none = []
log-info = []
log-debug = []
log-all = []
